Saving changes before merge